--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>eLEARNING - eLearning HTML Template</title>
+    <title>Qodorat - Qodorat HTML Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -14,7 +14,9 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap"
+        rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -33,7 +35,8 @@
 
 <body>
     <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+    <div id="spinner"
+        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
             <span class="sr-only">Loading...</span>
         </div>
@@ -44,29 +47,69 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>eLEARNING</h2>
+            <h2 class="m-0 text-primary">Qdorat-Gate</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <!-- Regular Links -->
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link active">About</a>
-                <a href="courses.html" class="nav-item nav-link">Courses</a>
+
+                <!-- Programs Dropdown -->
+                <div class="nav-item dropdown">
+                    <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                        onclick="window.location.href='programs.html'">Programs</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="#" class="dropdown-item">Leadership & Management</a>
+                        <a href="#" class="dropdown-item">Marketing Programs</a>
+                        <a href="#" class="dropdown-item">Quality Programs</a>
+                        <a href="#" class="dropdown-item">Occupational Safety & Health</a>
+                        <a href="#" class="dropdown-item">Accounting & Finance</a>
+                        <a href="#" class="dropdown-item">Procurement & Supply Chain</a>
+                        <a href="#" class="dropdown-item">Human Resources</a>
+                        <a href="#" class="dropdown-item">Engineering Programs</a>
+                    </div>
+                </div>
+
+                <!-- Diplomas Dropdown -->
+                <div class="nav-item dropdown">
+                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                      onclick="window.location.href='diplomas.html'">Diplomas</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="#" class="dropdown-item">Training and Development</a>
+                        <a href="#" class="dropdown-item">Accounting and Finance</a>
+                        <a href="#" class="dropdown-item">Management Sciences</a>
+                        <a href="#" class="dropdown-item">Women's Leadership</a>
+                        <a href="#" class="dropdown-item">Project Management</a>
+                    </div>
+                </div>
+
+
+                <!-- Pages Dropdown -->
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="team.html" class="dropdown-item">Our Team</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
+
+                <!-- Contact Link -->
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
+
+            <!-- Button -->
+            <a href="#" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
+                Join Now <i class="fa fa-arrow-right ms-3"></i>
+            </a>
         </div>
     </nav>
+
+
     <!-- Navbar End -->
 
 
@@ -89,101 +132,128 @@
     </div>
     <!-- Header End -->
 
+    <!-- About Start -->
+    <div class="container-xxl py-5">
+        <div class="row g-5">
+            <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+                <h6 class="section-title bg-white text-start text-primary pe-3">About Us</h6>
+                <h1 class="mb-4">Welcome To Qdorat-Gate</h1>
+                <p class="mb-4">
+                    Qodrat is a leading training and development company dedicated to empowering individuals and
+                    organizations through high-quality professional programs and diplomas. We offer a wide range of
+                    courses in management, leadership, marketing, quality assurance, occupational health and safety,
+                    financial accounting, procurement and supply chain, human resources, and engineering.
+                </p>
+                <h2 class="mb-4">Our Vision</h2>
+                <p class="mb-4">
+                    At Qodrat, we believe in building capabilities that make a difference. Our programs are designed by
+                    industry experts to ensure practical knowledge, real-world application, and measurable results.
+                </p>
+
+                <div class="row gy-2 gx-4 mb-4">
+                    <div class="col-sm-6">
+                        <a href="diplomas.html" class="text-decoration-none">
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Diploma Tracks</p>
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        <a href="programs.html" class="text-decoration-none">
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Programs</p>
+                        </a>
+                    </div>
+                    <div class="col-sm-6">
+                        <a href="instructors.html" class="text-decoration-none">
+                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Skilled Instructors</p>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Optional button -->
+                <!-- <a class="btn btn-primary py-3 px-5 mt-2" href="about.html">Read More</a> -->
+            </div>
+        </div>
+    </div>
+    </div>
+
+
+    <!-- About End -->
 
     <!-- Service Start -->
     <div class="container-xxl py-5">
         <div class="container">
+            <div class="text-center mb-5">
+                <h2 class="mb-3">Explore Opportunities with Qodrat</h2>
+                <p>Tap into real value through our services designed to boost your career.</p>
+            </div>
             <div class="row g-4">
+                <!-- Diplomas -->
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item text-center pt-3">
-                        <div class="p-4">
-                            <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-                            <h5 class="mb-3">Skilled Instructors</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                    <a href="diplomas.html" class="text-decoration-none">
+                        <div class="service-item text-center pt-3">
+                            <div class="p-4">
+                                <i class="fa fa-3x fa-certificate text-primary mb-4"></i>
+                                <h5 class="mb-3">Diploma Tracks</h5>
+                                <p>Explore our certified diploma programs in leadership, HR, quality, and more.</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
+
+                <!-- Programs -->
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="service-item text-center pt-3">
-                        <div class="p-4">
-                            <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                            <h5 class="mb-3">Online Classes</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                    <a href="programs.html" class="text-decoration-none">
+                        <div class="service-item text-center pt-3">
+                            <div class="p-4">
+                                <i class="fa fa-3x fa-briefcase text-primary mb-4"></i>
+                                <h5 class="mb-3">Programs</h5>
+                                <p>Hands-on training in marketing, accounting, safety, and engineering.</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
+
+                <!-- Ask an Expert -->
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="service-item text-center pt-3">
-                        <div class="p-4">
-                            <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                            <h5 class="mb-3">Home Projects</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                    <a href="ask-expert.html" class="text-decoration-none">
+                        <div class="service-item text-center pt-3">
+                            <div class="p-4">
+                                <i class="fa fa-3x fa-comments text-primary mb-4"></i>
+                                <h5 class="mb-3">Ask an Expert</h5>
+                                <p>Need guidance? Our instructors are here to support your goals.</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
+
+                <!-- Free Session -->
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="service-item text-center pt-3">
-                        <div class="p-4">
-                            <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-                            <h5 class="mb-3">Book Library</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                    <a href="free-session.html" class="text-decoration-none">
+                        <div class="service-item text-center pt-3">
+                            <div class="p-4">
+                                <i class="fa fa-3x fa-calendar-check text-primary mb-4"></i>
+                                <h5 class="mb-3">Join a Free Session</h5>
+                                <p>Try our programs with a free intro session before you enroll.</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
+
     <!-- Service End -->
 
 
-    <!-- About Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
-                    <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="img/about.jpg" alt="" style="object-fit: cover;">
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <h6 class="section-title bg-white text-start text-primary pe-3">About Us</h6>
-                    <h1 class="mb-4">Welcome To Qdorat-Gate</h1><p class="mb-4">Qdorat-Gate is a leading company specialized in developing human capital through tailored training and development programs. As the operational arm of the Public Works Authority, we focus on enhancing individual and organizational performance across multiple sectors. Our mission is to drive excellence by equipping professionals with the skills and knowledge needed to succeed in today’s competitive landscape</p>
-                    <h2 class="mb-4">Our Programs and Services</h2> <p class="mb-4">We offer a wide range of high-impact programs in leadership, marketing, quality management, safety, procurement, HR, and engineering. Designed with practicality in mind, our courses empower participants to apply new competencies directly in their workplaces, fostering growth and innovation within their organizations.</p>
-                    <div class="row gy-2 gx-4 mb-4">
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Skilled Instructors</p>
-                        </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Online Classes</p>
-                        </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>International Certificate</p>
-                        </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Skilled Instructors</p>
-                        </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Online Classes</p>
-                        </div>
-                        <div class="col-sm-6">
-                            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>International Certificate</p>
-                        </div>
-                    </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- About End -->
 
 
-    <!-- Team Start -->
+    <!-- Team Start
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="section-title bg-white text-center text-primary px-3">Instructors</h6>
                 <h1 class="mb-5">Expert Instructors</h1>
             </div>
+            
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item bg-light">
@@ -260,8 +330,9 @@
             </div>
         </div>
     </div>
-    <!-- Team End -->
-        
+     Team End -->
+
+
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -277,16 +348,16 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Contact</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Egypt</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
+                <!-- Gallery
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Gallery</h4>
                     <div class="row g-2 pt-2">
@@ -310,12 +381,14 @@
                         </div>
                     </div>
                 </div>
+                -->
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p>Sign-up for our newsletter</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                        <button type="button"
+                            class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
                 </div>
             </div>
