--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                         <a href="#" class="dropdown-item">Leadership & Management</a>
                         <a href="#" class="dropdown-item">Marketing Programs</a>
                         <a href="#" class="dropdown-item">Quality Programs</a>
-                        <a href="#" class="dropdown-item">Occupational Safety & Health</a>
+                        <!-- <a href="#" class="dropdown-item">Occupational Safety & Health</a> -->
                         <a href="#" class="dropdown-item">Accounting & Finance</a>
                         <a href="#" class="dropdown-item">Procurement & Supply Chain</a>
                         <a href="#" class="dropdown-item">Human Resources</a>
