--- a/courses.html
+++ b/courses.html
@@ -41,34 +41,73 @@
     <!-- Spinner End -->
 
 
-    <!-- Navbar Start -->
+        <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>eLEARNING</h2>
+            <h2 class="m-0 text-primary">Qdorat-Gate</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <!-- Regular Links -->
                 <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="courses.html" class="nav-item nav-link active">Courses</a>
+                <a href="about.html" class="nav-item nav-link active">About</a>
+
+                <!-- Programs Dropdown -->
+                <div class="nav-item dropdown">
+                    <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                        onclick="window.location.href='programs.html'">Programs</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="#" class="dropdown-item">Leadership & Management</a>
+                        <a href="#" class="dropdown-item">Marketing Programs</a>
+                        <a href="#" class="dropdown-item">Quality Programs</a>
+                        <!-- <a href="#" class="dropdown-item">Occupational Safety & Health</a> -->
+                        <a href="#" class="dropdown-item">Accounting & Finance</a>
+                        <a href="#" class="dropdown-item">Procurement & Supply Chain</a>
+                        <a href="#" class="dropdown-item">Human Resources</a>
+                        <a href="#" class="dropdown-item">Engineering Programs</a>
+                    </div>
+                </div>
+
+                <!-- Diplomas Dropdown -->
+                <div class="nav-item dropdown">
+                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                      onclick="window.location.href='diplomas.html'">Diplomas</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="#" class="dropdown-item">Training and Development</a>
+                        <a href="#" class="dropdown-item">Accounting and Finance</a>
+                        <a href="#" class="dropdown-item">Management Sciences</a>
+                        <a href="#" class="dropdown-item">Women's Leadership</a>
+                        <a href="#" class="dropdown-item">Project Management</a>
+                    </div>
+                </div>
+
+
+                <!-- Pages Dropdown -->
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="team.html" class="dropdown-item">Our Team</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
+
+                <!-- Contact Link -->
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
+
+            <!-- Button -->
+            <a href="#" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
+                Join Now <i class="fa fa-arrow-right ms-3"></i>
+            </a>
         </div>
     </nav>
-    <!-- Navbar End -->
 
+
+    <!-- Navbar End -->
 
     <!-- Header Start -->
     <div class="container-fluid bg-primary py-5 mb-5 page-header">
