--- a/diplomas.html
+++ b/diplomas.html
@@ -6,45 +6,96 @@
   <title>Diplomas</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #ffffff;
-    }
+  <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap"
+        rel="stylesheet">
 
-    h2.text-center {
-      color: rgba(27, 42, 92, 0.989);
-      font-weight: bold;
-      font-size: 2rem;
-    }
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    .program-link {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 200px;
-      text-align: center;
-      background-size: cover;
-      background-position: center;
-      border-radius: 12px;
-      font-size: 1.2rem;
-      font-weight: bold;
-      color: #000000;
-      text-decoration: none;
-      transition: all 0.3s ease;
-      border: 2px solid #000305;
-      box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
-    }
+    <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
-    .program-link:hover {
-      background-color: rgb(31, 49, 84);
-      color: #f9f9f9;
-      text-decoration: none;
-      backdrop-filter: brightness(0.9);
-    }
-  </style>
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Template Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
+  
 </head>
 <body>
+      <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
+        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+            <h2 class="m-0 text-primary">Qdorat-Gate</h2>
+        </a>
+        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <!-- Regular Links -->
+                <a href="index.html" class="nav-item nav-link">Home</a>
+                <a href="about.html" class="nav-item nav-link active">About</a>
+
+                <!-- Programs Dropdown -->
+                <div class="nav-item dropdown">
+                    <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                        onclick="window.location.href='programs.html'">Programs</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="#" class="dropdown-item">Leadership & Management</a>
+                        <a href="#" class="dropdown-item">Marketing Programs</a>
+                        <a href="#" class="dropdown-item">Quality Programs</a>
+                        <!-- <a href="#" class="dropdown-item">Occupational Safety & Health</a> -->
+                        <a href="#" class="dropdown-item">Accounting & Finance</a>
+                        <a href="#" class="dropdown-item">Procurement & Supply Chain</a>
+                        <a href="#" class="dropdown-item">Human Resources</a>
+                        <a href="#" class="dropdown-item">Engineering Programs</a>
+                    </div>
+                </div>
+
+                <!-- Diplomas Dropdown -->
+                <div class="nav-item dropdown">
+                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                      onclick="window.location.href='diplomas.html'">Diplomas</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="#" class="dropdown-item">Training and Development</a>
+                        <a href="#" class="dropdown-item">Accounting and Finance</a>
+                        <a href="#" class="dropdown-item">Management Sciences</a>
+                        <a href="#" class="dropdown-item">Women's Leadership</a>
+                        <a href="#" class="dropdown-item">Project Management</a>
+                    </div>
+                </div>
+
+
+                <!-- Pages Dropdown -->
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="team.html" class="dropdown-item">Our Team</a>
+                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                    </div>
+                </div>
+
+                <!-- Contact Link -->
+                <a href="contact.html" class="nav-item nav-link">Contact</a>
+            </div>
+
+            <!-- Button -->
+            <a href="#" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
+                Join Now <i class="fa fa-arrow-right ms-3"></i>
+            </a>
+        </div>
+    </nav>
+
+
+    <!-- Navbar End -->
   <section class="our-services our-values container py-5">
     <h2 class="text-center mb-5">Diplomas</h1>
     <div class="row g-4">
