--- a/index.html
+++ b/index.html
@@ -42,35 +42,73 @@
     <!-- Spinner End -->
 
 
-    <!-- Navbar Start -->
+     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>Quodrat</h2>
+            <h2 class="m-0 text-primary">Qdorat-Gate</h2>
         </a>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-label="Toggle navigation">
+        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="courses.html" class="nav-item nav-link">Courses</a>
+                <!-- Regular Links -->
+                <a href="index.html" class="nav-item nav-link">Home</a>
+                <a href="about.html" class="nav-item nav-link active">About</a>
+
+                <!-- Programs Dropdown -->
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false">Pages</a>
+                    <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                        onclick="window.location.href='programs.html'">Programs</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonials</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="#" class="dropdown-item">Leadership & Management</a>
+                        <a href="#" class="dropdown-item">Marketing Programs</a>
+                        <a href="#" class="dropdown-item">Quality Programs</a>
+                        <!-- <a href="#" class="dropdown-item">Occupational Safety & Health</a> -->
+                        <a href="#" class="dropdown-item">Accounting & Finance</a>
+                        <a href="#" class="dropdown-item">Procurement & Supply Chain</a>
+                        <a href="#" class="dropdown-item">Human Resources</a>
+                        <a href="#" class="dropdown-item">Engineering Programs</a>
                     </div>
                 </div>
+
+                <!-- Diplomas Dropdown -->
+                <div class="nav-item dropdown">
+                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                      onclick="window.location.href='diplomas.html'">Diplomas</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="#" class="dropdown-item">Training and Development</a>
+                        <a href="#" class="dropdown-item">Accounting and Finance</a>
+                        <a href="#" class="dropdown-item">Management Sciences</a>
+                        <a href="#" class="dropdown-item">Women's Leadership</a>
+                        <a href="#" class="dropdown-item">Project Management</a>
+                    </div>
+                </div>
+
+
+                <!-- Pages Dropdown -->
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="team.html" class="dropdown-item">Our Team</a>
+                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                    </div>
+                </div>
+
+                <!-- Contact Link -->
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="#" class="btn btn-primary py-3 px-lg-5 d-none d-lg-block">Join Now<i class="fa fa-arrow-right ms-2"></i></a>
+
+            <!-- Button -->
+            <a href="#" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
+                Join Now <i class="fa fa-arrow-right ms-3"></i>
+            </a>
         </div>
     </nav>
-    <!-- Navbar End -->
 
+
+    <!-- Navbar End -->
 
 
    <!-- Carousel Start -->
@@ -396,7 +434,7 @@
 
 
     <!-- Team Start -->
-<div class="container-xxl py-5">
+<!-- <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h6 class="section-title bg-white text-center text-primary px-3">Instructors</h6>
@@ -404,7 +442,7 @@
         </div>
         <div class="row g-4">
 
-            <!-- Instructor 1 -->
+            Instructor 1
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="team-item bg-light">
                     <div class="overflow-hidden">
@@ -423,7 +461,7 @@
                 </div>
             </div>
 
-            <!-- Instructor 2 -->
+            Instructor 2
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="team-item bg-light">
                     <div class="overflow-hidden">
@@ -442,7 +480,7 @@
                 </div>
             </div>
 
-            <!-- Instructor 3 -->
+            Instructor 3
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="team-item bg-light">
                     <div class="overflow-hidden">
@@ -461,7 +499,7 @@
                 </div>
             </div>
 
-            <!-- Instructor 4 -->
+            Instructor 4
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                 <div class="team-item bg-light">
                     <div class="overflow-hidden">
@@ -482,7 +520,7 @@
 
         </div>
     </div>
-</div>
+</div> -->
 <!-- Team End -->
 
 
@@ -572,7 +610,7 @@
             </div>
 
             <!-- Gallery -->
-            <div class="col-lg-3 col-md-6">
+            <!-- <div class="col-lg-3 col-md-6">
                 <h4 class="text-white mb-3">Gallery</h4>
                 <div class="row g-2 pt-2">
                     <div class="col-4"><img class="img-fluid bg-light p-1" src="img/academy-1.jpg" alt="Training Room"></div>
@@ -582,7 +620,7 @@
                     <div class="col-4"><img class="img-fluid bg-light p-1" src="img/academy-5.jpg" alt="Team Training"></div>
                     <div class="col-4"><img class="img-fluid bg-light p-1" src="img/academy-6.jpg" alt="Panel Session"></div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Newsletter -->
             <div class="col-lg-3 col-md-6">
