--- a/programs.html
+++ b/programs.html
@@ -4,119 +4,182 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Programs</title>
+  
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #ffffff;
-      margin: 0;
-      padding-top: 60px; /* space for the fixed top bar */
-    }
+  <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap"
+        rel="stylesheet">
 
-    .top-bar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 60px;
-      background-color: #1B2A5C;
-      color: white;
-      font-size: 1.5rem;
-      font-weight: bold;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 1000;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    h2.text-center {
-      color: rgba(27, 42, 92, 0.989);
-      font-weight: bold;
-      font-size: 2rem;
-    }
+    <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
-    .program-link {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 200px;
-      text-align: center;
-      background-size: cover;
-      background-position: center;
-      border-radius: 12px;
-      font-size: 1.2rem;
-      font-weight: bold;
-      color: #000000;
-      text-decoration: none;
-      transition: all 0.3s ease;
-      border: 2px solid #000305;
-      box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
-    }
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    .program-link:hover {
-      background-color: rgb(31, 49, 84);
-      color: #f9f9f9;
-      text-decoration: none;
-      backdrop-filter: brightness(0.9);
-    }
-  </style>
+    <!-- Template Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
+  
 </head>
 <body>
   
-  
+  <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
+        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+            <h2 class="m-0 text-primary">Qdorat-Gate</h2>
+        </a>
+        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-  <!-- Main Content -->
-  <section class="our-services our-values container py-5">
-    <h2 class="text-center mb-5">Our Programs</h2>
-    <div class="row g-4">
-      <div class="col-md-6">
-        <a href="Leadership & Management.html" class="program-link"
-          style="background-image: url('https://images.unsplash.com/photo-1573497019410-0e1c9a5f35d3');">
-          Leadership & Management
-        </a>
-      </div>
-      <div class="col-md-6">
-        <a href="Marketing Programs.html" class="program-link"
-          style="background-image: url('https://images.unsplash.com/photo-1581091012184-7cbe64200b51');">
-          Marketing Programs
-        </a>
-      </div>
-      <div class="col-md-6">
-        <a href="Occupational Safety & Health.html" class="program-link"
-          style="background-image: url('https://images.unsplash.com/photo-1581090700227-1c1aef4c82e5');">
-          Occupational Safety & Health
-        </a>
-      </div>
-      <div class="col-md-6">
-        <a href="Accounting & Finance.html" class="program-link"
-          style="background-image: url('https://images.unsplash.com/photo-1605902711622-cfb43c4437d2');">
-          Accounting & Finance
-        </a>
-      </div>
-      <div class="col-md-6">
-        <a href="Procurement & Supply Chain.html" class="program-link"
-          style="background-image: url('https://images.unsplash.com/photo-1581091215367-59f1b6f8ec87');">
-          Procurement & Supply Chain
-        </a>
-      </div>
-      <div class="col-md-6">
-        <a href="Human Resources.html" class="program-link"
-          style="background-image: url('https://images.unsplash.com/photo-1518600506278-4e8ef466b810');">
-          Human Resources
-        </a>
-      </div>
-      <div class="col-md-6">
-        <a href="Engineering Programs.html" class="program-link"
-          style="background-image: url('https://images.unsplash.com/photo-1581091012184-7cbe64200b51');">
-          Engineering Programs
-        </a>
-      </div>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <!-- Regular Links -->
+                <a href="index.html" class="nav-item nav-link">Home</a>
+                <a href="about.html" class="nav-item nav-link active">About</a>
+
+                <!-- Programs Dropdown -->
+                <div class="nav-item dropdown">
+                    <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                        onclick="window.location.href='programs.html'">Programs</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="#" class="dropdown-item">Leadership & Management</a>
+                        <a href="#" class="dropdown-item">Marketing Programs</a>
+                        <a href="#" class="dropdown-item">Quality Programs</a>
+                        <!-- <a href="#" class="dropdown-item">Occupational Safety & Health</a> -->
+                        <a href="#" class="dropdown-item">Accounting & Finance</a>
+                        <a href="#" class="dropdown-item">Procurement & Supply Chain</a>
+                        <a href="#" class="dropdown-item">Human Resources</a>
+                        <a href="#" class="dropdown-item">Engineering Programs</a>
+                    </div>
+                </div>
+
+                <!-- Diplomas Dropdown -->
+                <div class="nav-item dropdown">
+                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                      onclick="window.location.href='diplomas.html'">Diplomas</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="#" class="dropdown-item">Training and Development</a>
+                        <a href="#" class="dropdown-item">Accounting and Finance</a>
+                        <a href="#" class="dropdown-item">Management Sciences</a>
+                        <a href="#" class="dropdown-item">Women's Leadership</a>
+                        <a href="#" class="dropdown-item">Project Management</a>
+                    </div>
+                </div>
+
+
+                <!-- Pages Dropdown -->
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <div class="dropdown-menu fade-down m-0">
+                        <a href="team.html" class="dropdown-item">Our Team</a>
+                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                    </div>
+                </div>
+
+                <!-- Contact Link -->
+                <a href="contact.html" class="nav-item nav-link">Contact</a>
+            </div>
+
+            <!-- Button -->
+            <a href="#" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
+                Join Now <i class="fa fa-arrow-right ms-3"></i>
+            </a>
+        </div>
+    </nav>
+
+
+    <!-- Navbar End -->
+
+  <section class="container py-5">
+  <h2 class="text-center mb-5">Our Programs</h2>
+  <div class="row g-4">
+
+    <div class="col-md-4">
+      <a href="Leadership & Management.html" class="program-card">
+        <img src="https://images.unsplash.com/photo-1573497019410-0e1c9a5f35d3" alt="Leadership & Management">
+        <h5 class="text-center">Leadership & Management</h5>
+      </a>
     </div>
-  </section>
+
+    <div class="col-md-4">
+      <a href="Marketing Programs.html" class="program-card">
+        <img src="https://images.unsplash.com/photo-1581091012184-7cbe64200b51" alt="Marketing Programs">
+        <h5 class="text-center">Marketing Programs</h5>
+      </a>
+    </div>
+
+    <div class="col-md-4">
+      <a href="Occupational Safety & Health.html" class="program-card">
+        <img src="https://images.unsplash.com/photo-1581090700227-1c1aef4c82e5" alt="Occupational Safety & Health">
+        <h5 class="text-center">Occupational Safety & Health</h5>
+      </a>
+    </div>
+
+    <div class="col-md-4">
+      <a href="Accounting & Finance.html" class="program-card">
+        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437d2" alt="Accounting & Finance">
+        <h5 class="text-center">Accounting & Finance</h5>
+      </a>
+    </div>
+
+    <div class="col-md-4">
+      <a href="Procurement & Supply Chain.html" class="program-card">
+        <img src="https://images.unsplash.com/photo-1581091215367-59f1b6f8ec87" alt="Procurement & Supply Chain">
+        <h5 class="text-center">Procurement & Supply Chain</h5>
+      </a>
+    </div>
+
+    <div class="col-md-4">
+      <a href="Human Resources.html" class="program-card">
+        <img src="https://images.unsplash.com/photo-1518600506278-4e8ef466b810" alt="Human Resources">
+        <h5 class="text-center">Human Resources</h5>
+      </a>
+    </div>
+
+    <div class="col-md-4">
+      <a href="Engineering Programs.html" class="program-card">
+        <img src="https://images.unsplash.com/photo-1581091012184-7cbe64200b51" alt="Engineering Programs">
+        <h5 class="text-center">Engineering Programs</h5>
+      </a>
+    </div>
+
+  </div>
+</section>
 
   <!-- Bootstrap JS (optional) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+      <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-/xUjone5FWt+ZBmdMSaUXlwP8s1a5L8kkSxQZkmg7cKeV7jZGk5p+UnzKHm6Z9Z7" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-qgRpxhFpjIm+hXGZ5jehKEl2+u8q6EzqkbnMbPtAwxg+TxQpFuT+d+kFj6iyrIig" crossorigin="anonymous"></script>
+
+    <!-- Animation & UI Libraries -->
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
+    <!-- Spinner Removal Script -->
+    <script>
+        window.addEventListener("load", function () {
+            const spinner = document.getElementById("spinner");
+            if (spinner) {
+                spinner.classList.remove("show");
+                setTimeout(() => spinner.remove(), 300); // Smooth fade optional
+            }
+        });
+    </script>
+
+    <!-- Main JavaScript -->
+    <script src="js/main.js"></script>
 </body>
 </html>
