--- a/programs.html
+++ b/programs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Programs</title>
+  
   
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -98,62 +98,97 @@
 
 
     <!-- Navbar End -->
+  
 
-  <section class="container py-5">
-  <h2 class="text-center mb-5">Our Programs</h2>
+
+ <div class="container py-5">
+  
+  <!--section -->
+      <div class="section-title-container">
+        <h2 class="section-title">Our Programs</h2>
+      <div class="section-title-divider"></div>
+
   <div class="row g-4">
 
+    <!-- Program 1 -->
     <div class="col-md-4">
-      <a href="Leadership & Management.html" class="program-card">
-        <img src="https://images.unsplash.com/photo-1573497019410-0e1c9a5f35d3" alt="Leadership & Management">
-        <h5 class="text-center">Leadership & Management</h5>
-      </a>
+      <div class="card shadow-sm h-100">
+        <img src="https://picsum.photos/400/250?random=1" class="card-img-top" alt="Leadership & Management">
+        <div class="card-body text-center">
+          <h5 class="card-title">Leadership & Management</h5>
+        </div>
+      </div>
     </div>
 
+    <!-- Program 2 -->
     <div class="col-md-4">
-      <a href="Marketing Programs.html" class="program-card">
-        <img src="https://images.unsplash.com/photo-1581091012184-7cbe64200b51" alt="Marketing Programs">
-        <h5 class="text-center">Marketing Programs</h5>
-      </a>
+      <div class="card shadow-sm h-100">
+        <img src="https://picsum.photos/400/250?random=2" class="card-img-top" alt="Marketing Programs">
+        <div class="card-body text-center">
+          <h5 class="card-title">Marketing Programs</h5>
+        </div>
+      </div>
     </div>
 
+    <!-- Program 3 -->
     <div class="col-md-4">
-      <a href="Occupational Safety & Health.html" class="program-card">
-        <img src="https://images.unsplash.com/photo-1581090700227-1c1aef4c82e5" alt="Occupational Safety & Health">
-        <h5 class="text-center">Occupational Safety & Health</h5>
-      </a>
+      <div class="card shadow-sm h-100">
+        <img src="https://picsum.photos/400/250?random=3" class="card-img-top" alt="Safety & Health">
+        <div class="card-body text-center">
+          <h5 class="card-title">Safety & Health</h5>
+        </div>
+      </div>
     </div>
 
+    <!-- Program 4 -->
     <div class="col-md-4">
-      <a href="Accounting & Finance.html" class="program-card">
-        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437d2" alt="Accounting & Finance">
-        <h5 class="text-center">Accounting & Finance</h5>
-      </a>
+      <div class="card shadow-sm h-100">
+        <img src="https://picsum.photos/400/250?random=4" class="card-img-top" alt="Accounting & Finance">
+        <div class="card-body text-center">
+          <h5 class="card-title">Accounting & Finance</h5>
+        </div>
+      </div>
     </div>
 
+    <!-- Program 5 -->
     <div class="col-md-4">
-      <a href="Procurement & Supply Chain.html" class="program-card">
-        <img src="https://images.unsplash.com/photo-1581091215367-59f1b6f8ec87" alt="Procurement & Supply Chain">
-        <h5 class="text-center">Procurement & Supply Chain</h5>
-      </a>
+      <div class="card shadow-sm h-100">
+        <img src="https://picsum.photos/400/250?random=5" class="card-img-top" alt="Procurement & Supply Chain">
+        <div class="card-body text-center">
+          <h5 class="card-title">Procurement & Supply Chain</h5>
+        </div>
+      </div>
     </div>
 
+    <!-- Program 6 -->
     <div class="col-md-4">
-      <a href="Human Resources.html" class="program-card">
-        <img src="https://images.unsplash.com/photo-1518600506278-4e8ef466b810" alt="Human Resources">
-        <h5 class="text-center">Human Resources</h5>
-      </a>
+      <div class="card shadow-sm h-100">
+        <img src="https://picsum.photos/400/250?random=6" class="card-img-top" alt="Human Resources">
+        <div class="card-body text-center">
+          <h5 class="card-title">Human Resources</h5>
+        </div>
+      </div>
     </div>
 
+    <!-- Program 7 -->
     <div class="col-md-4">
-      <a href="Engineering Programs.html" class="program-card">
-        <img src="https://images.unsplash.com/photo-1581091012184-7cbe64200b51" alt="Engineering Programs">
-        <h5 class="text-center">Engineering Programs</h5>
-      </a>
+      <div class="card shadow-sm h-100">
+        <img src="https://picsum.photos/400/250?random=7" class="card-img-top" alt="Engineering Programs">
+        <div class="card-body text-center">
+          <h5 class="card-title">Engineering Programs</h5>
+        </div>
+      </div>
     </div>
 
+  </div> <!-- row end -->
+
+  <!-- Button -->
+  <!-- <div class="text-center mt-4">
+    <a href="#" class="btn btn-primary py-3 px-5">View All Programs</a>
   </div>
-</section>
+</div> -->
+<!-- end section -->
+
 
   <!-- Bootstrap JS (optional) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
