--- a/courses.html
+++ b/courses.html
@@ -42,69 +42,52 @@
 
 
         <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary">Qdorat-Gate</h2>
-        </a>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <div class="navbar-nav ms-auto p-4 p-lg-0">
+    <!-- Regular Links -->
+    <a href="index.html" class="nav-item nav-link nav-text">Home</a>
+    <a href="about.html" class="nav-item nav-link nav-text active">About</a>
 
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <!-- Regular Links -->
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link active">About</a>
-
-                <!-- Programs Dropdown -->
-                <div class="nav-item dropdown">
-                    <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
-                        onclick="window.location.href='programs.html'">Programs</a>
-                    <div class="dropdown-menu fade-down m-0">
-                        <a href="#" class="dropdown-item">Leadership & Management</a>
-                        <a href="#" class="dropdown-item">Marketing Programs</a>
-                        <a href="#" class="dropdown-item">Quality Programs</a>
-                        <!-- <a href="#" class="dropdown-item">Occupational Safety & Health</a> -->
-                        <a href="#" class="dropdown-item">Accounting & Finance</a>
-                        <a href="#" class="dropdown-item">Procurement & Supply Chain</a>
-                        <a href="#" class="dropdown-item">Human Resources</a>
-                        <a href="#" class="dropdown-item">Engineering Programs</a>
-                    </div>
-                </div>
-
-                <!-- Diplomas Dropdown -->
-                <div class="nav-item dropdown">
-                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
-                      onclick="window.location.href='diplomas.html'">Diplomas</a>
-                    <div class="dropdown-menu fade-down m-0">
-                        <a href="#" class="dropdown-item">Training and Development</a>
-                        <a href="#" class="dropdown-item">Accounting and Finance</a>
-                        <a href="#" class="dropdown-item">Management Sciences</a>
-                        <a href="#" class="dropdown-item">Women's Leadership</a>
-                        <a href="#" class="dropdown-item">Project Management</a>
-                    </div>
-                </div>
-
-
-                <!-- Pages Dropdown -->
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu fade-down m-0">
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                    </div>
-                </div>
-
-                <!-- Contact Link -->
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
-            </div>
-
-            <!-- Button -->
-            <a href="#" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
-                Join Now <i class="fa fa-arrow-right ms-3"></i>
-            </a>
+    <!-- Programs Dropdown -->
+    <div class="nav-item dropdown">
+        <a href="programs.html" class="nav-link nav-text dropdown-toggle" data-bs-toggle="dropdown"
+            onclick="window.location.href='programs.html'">Programs</a>
+        <div class="dropdown-menu fade-down m-0">
+            <a href="#" class="dropdown-item nav-text">Leadership & Management</a>
+            <a href="#" class="dropdown-item nav-text">Marketing Programs</a>
+            <a href="#" class="dropdown-item nav-text">Quality Programs</a>
+            <a href="#" class="dropdown-item nav-text">Accounting & Finance</a>
+            <a href="#" class="dropdown-item nav-text">Procurement & Supply Chain</a>
+            <a href="#" class="dropdown-item nav-text">Human Resources</a>
+            <a href="#" class="dropdown-item nav-text">Engineering Programs</a>
         </div>
-    </nav>
+    </div>
+
+    <!-- Diplomas Dropdown -->
+    <div class="nav-item dropdown">
+        <a href="diplomas.html" class="nav-link nav-text dropdown-toggle" data-bs-toggle="dropdown"
+          onclick="window.location.href='diplomas.html'">Diplomas</a>
+        <div class="dropdown-menu fade-down m-0">
+            <a href="#" class="dropdown-item nav-text">Training and Development</a>
+            <a href="#" class="dropdown-item nav-text">Accounting and Finance</a>
+            <a href="#" class="dropdown-item nav-text">Management Sciences</a>
+            <a href="#" class="dropdown-item nav-text">Women's Leadership</a>
+            <a href="#" class="dropdown-item nav-text">Project Management</a>
+        </div>
+    </div>
+
+    <!-- Pages Dropdown -->
+    <div class="nav-item dropdown">
+        <a href="#" class="nav-link nav-text dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+        <div class="dropdown-menu fade-down m-0">
+            <a href="team.html" class="dropdown-item nav-text">Our Team</a>
+            <a href="testimonial.html" class="dropdown-item nav-text">Testimonial</a>
+        </div>
+    </div>
+
+    <!-- Contact Link -->
+    <a href="contact.html" class="nav-item nav-link nav-text">Contact</a>
+</div>
+
 
 
     <!-- Navbar End -->
